listo para subir

--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Bitcoin</title>
     <link href="styles.css" rel="stylesheet">
-    <script src="app.js" defer></script>
+    <script src="script.js" defer></script>
     
 </head>
 <body>
     <main>
+        
         <div class="coin bitcoin-item">₿</div>
-        1 Bitcoin
+        <h2>1 Bitcoin</h2>
+         <br>
+            <button> 
+
+                <a id="ac" href="./index.html">ACTUALIZAR</a>
+
+            </button>
+
         <div class="coin-container" id="bitcoion">
+
+            <h3> Cotización Actual: </h3>
+            <br>
+            <span id="usd-amount"></span>
+
         </div>
-        =
-        <span id="usd-amount"></span>
+
+
         <div class="coin-container" id="dollar"></div>
 
     </main>
